--- a/README
+++ b/README
@@ -1,4 +1,6 @@
 Fast feature point registration by bigraph oriented edges voting demo code
+Samsonov Dima sdima1357@gmail.com
+vi3dim.com
 
 requirements:  OPENCV 
 
