--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Fast feature point registration by bigraph oriented edges voting demo code
-See doc/registration.pdf
+See doc/registration.pdf ,doc/Algorithm.pdf
 
 Samsonov Dima sdima1357@gmail.com vi3dim.com
 
